--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="js/leaflet-measure.js"></script>
-        <script src="https://urbview-my.sharepoint.com/:f:/p/rishabh_haria/EppKfcsV9lJCrtUSwJO23WEB3M-bnjeknu6BYpBN-LmRyw?e=aI2qXG/Totalscore_1.js"></script>
+        <script src="https://urbview-my.sharepoint.com/:u:/p/rishabh_haria/ES3z7oiyeXJBtG7oX-5sZiIBegbE1_A3ag3h0oK3G0GjgA"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
