--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="js/leaflet-measure.js"></script>
         <script src="https://urbview-my.sharepoint.com/:u:/p/rishabh_haria/ES3z7oiyeXJBtG7oX-5sZiIBegbE1_A3ag3h0oK3G0GjgA?e=WheUXf"></script>
+	<script>
+    		console.log(json_Totalscore_1); // Use the variable here
+	</script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
