--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 	<script>
     		var script = document.createElement('script');
     		script.src = "https://urbview-my.sharepoint.com/:u:/p/rishabh_haria/ES3z7oiyeXJBtG7oX-5sZiIBegbE1_A3ag3h0oK3G0GjgA?e=WheUXf";
-    		script.type = "application/javascript";
-    		document.head.appendChild(script);
+		script.type = "application/javascript";
+  		script.onload = () => console.log("Script loaded successfully!");
+   		script.onerror = () => console.error("Failed to load the script.");
+   		document.head.appendChild(script);
 	</script>
 
         <script>
