--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script src="js/leaflet-measure.js"></script>
 	<script>
     		var script = document.createElement('script');
-    		script.src = "https://urbview-my.sharepoint.com/:u:/p/rishabh_haria/ES3z7oiyeXJBtG7oX-5sZiIBegbE1_A3ag3h0oK3G0GjgA?e=WheUXf";
+    		script.src = "https://s3.us-east-1.amazonaws.com/qgis.webapp.data/data/Totalscore_1.js";
 		script.type = "application/javascript";
   		script.onload = () => console.log("Script loaded successfully!");
    		script.onerror = () => console.error("Failed to load the script.");
