--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="js/leaflet-measure.js"></script>
 	<script>
+	   window.onload = function() {
     		var script = document.createElement('script');
     		script.src = "https://s3.us-east-1.amazonaws.com/qgis.webapp.data/data/Totalscore_1.js";
 		script.type = "application/javascript";
   		script.onload = () => console.log("Script loaded successfully!");
    		script.onerror = () => console.error("Failed to load the script.");
    		document.head.appendChild(script);
+		};
 	</script>
 
         <script>
